add user creation + activation
